+ corrected spacing and tect alignment

--- a/source/sass/component/_table.scss
+++ b/source/sass/component/_table.scss
@@ -17,7 +17,7 @@
     }
 
     .c-table__header {
-        padding: calc(#{$base} * 2);
+        padding: calc(#{$base} * 1.5);
     }
 
     &.c-table--box-shadow {
@@ -132,7 +132,7 @@
 
     &__column {
         position: relative;
-        padding: calc(#{$base} * 2);
+        padding: calc(#{$base} * 1.5);
 
         .c-icon {
             position: absolute;
@@ -146,6 +146,7 @@
     }
 
     td.c-table__column {
+        vertical-align: top;
         border-right: 1px solid $color-lighter;
 
         &:last-of-type {
